@@ -26,8 +26,10 @@
 
 def agent_emcvnx_arguments(params, hostname, ipaddress):
     args = ''
-    args += " -u " + quote_shell_string(params["user"])
-    args += " -p " + quote_shell_string(params["password"])
+    if params["user"] != "":
+        args += " -u " + quote_shell_string(params["user"])
+    if params["password"] != "":
+        args += " -p " + quote_shell_string(params["password"])
     args += " -i " + ",".join(params["infos"])
 
     args += " " + quote_shell_string(ipaddress)
